@@ -3,7 +3,7 @@ Type: Package
 Encoding: UTF-8
 Title: Data Visualization for Statistics in Social Science
 Version: 1.6.8-2
-Date: 2015-02-03
+Date: 2015-02-05
 Author: Daniel Lüdecke <d.luedecke@uke.de>
 Maintainer: Daniel Lüdecke <d.luedecke@uke.de>
 Description: Collection of several plotting and table output functions for
