@@ -38,6 +38,8 @@ In case you want / have to cite my package, please use `citation('sjPlot')` for 
 
 ### Bug fixes
 * Fixed bug in function `sjs.stdmm`, which was the cause for a bug with `type = "fe.std"` in `sjp.lmer`.
+* Fixed bug in `sjp.int` when fitted model does not contain p-values (e.g. when passing a merMod object from lme4).
+* Minor bug fix in `sjt.int`.
 
 
 ### Changelog of current stable build 1.6.8
