@@ -2,6 +2,8 @@ Version 1.6.8-2
 ------------------------------------------------------------------------------
 Bug fixes:
 * Fixed bug in function "sjs.stdmm", which was the cause for a bug with type = "fe.std" in "sjp.lmer".
+* Fixed bug in "sjp.int" when fitted model does not contain p-values (e.g. when passing a merMod object from lme4).
+* Minor bug fix in "sjt.int".
 
 
 Version 1.6.8
